[tool.poetry]
name = "mastodon_archive"
version = "0.1.0"
description = "Mastodon archival tool. https://github.com/kensanata/mastodon-backup"
authors = ["Your Name <you@example.com>"]
license = "GPLv3"

[tool.poetry.scripts]
mastodon-archive = 'mastodon_archive:main'

[tool.poetry.dependencies]
python = "^3.9"
"Mastodon.py" = "^1.5.1"
progress = "^1.6"
html2text = "^2020.1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
